--- a/docker-compose-lessons/fullstack-dpl/sample-product-reactapp/Dockerfile
+++ b/docker-compose-lessons/fullstack-dpl/sample-product-reactapp/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:lts-alpine3.23 AS builder
 WORKDIR /app
 COPY package*.json ./
+ENV REACT_APP_BASE_URL=http://spring-svc:8080
 RUN npm install
 COPY . .
 RUN npm run build
