--- a/docker-compose-lessons/fullstack-dpl/docker-compose.yaml
+++ b/docker-compose-lessons/fullstack-dpl/docker-compose.yaml
@@ -29,8 +29,8 @@ services:
     # pull_policy: build
     # volumes:
     #   - image-backup-vol:/app/filestorage/images
-    ports:
-      - 8080:${APP_PORT:-8080}
+    # ports:
+    #   - 8080:${APP_PORT:-8080}
     networks:
       - frontend
     # depends_on:
@@ -44,6 +44,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB:-postgres}
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - frontend
 networks:
   frontend:
 volumes:
